force-app/main/default/objects/RallyIssue__c/RallyIssue__c.object-meta.xml
<CustomObject>
    <description>Work item tracked within RallyPoint with workflow support.</description>
    <label>Rally Issue</label>
    <nameField>
        <label>Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rally Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>