force-app/main/default/objects/RallyIssue__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User currently responsible for the issue.</description>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Issues</relationshipLabel>
    <relationshipName>AssignedIssues</relationshipName>
    <type>Lookup</type>
</CustomField>