force-app/main/default/objects/RallyIssue__c/fields/BlockedReason__c.field-meta.xml
<CustomField>
    <fullName>BlockedReason__c</fullName>
    <description>Why the issue is blocked.</description>
    <label>Blocked Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>