force-app/main/default/objects/RallyIssue__c/fields/Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>Issue_Key__c</fullName>
    <description>Unique RallyPoint issue key.</description>
    <label>Issue Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>