force-app/main/default/objects/RallyIssue__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <description>Issue category used for workflow.</description>
    <label>Issue Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Story</fullName>
                <default>true</default>
                <label>Story</label>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>