force-app/main/default/objects/RallyIssue__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent project for the issue.</description>
    <label>Project</label>
    <referenceTo>RallyProject__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>