force-app/main/default/objects/RallyIssue__c/fields/Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that created the issue.</description>
    <label>Reporter</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reported Issues</relationshipLabel>
    <relationshipName>ReportedIssues</relationshipName>
    <type>Lookup</type>
</CustomField>