force-app/main/default/objects/RallyIssue__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Incrementing sequence scoped to the project.</description>
    <label>Project Sequence</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>