force-app/main/default/objects/RallyIssue__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sprint currently assigned to the issue.</description>
    <label>Sprint</label>
    <referenceTo>RallySprint__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>SprintIssues</relationshipName>
    <type>Lookup</type>
</CustomField>