force-app/main/default/objects/RallyIssue__c/fields/Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Story_Points__c</fullName>
    <description>Story points committed for the issue.</description>
    <label>Story Points</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>